@@ -12,11 +12,15 @@ class EyeBorderSprite : public BorderSprite {
     public:
         EyeBorderSprite();
         
+        virtual ~EyeBorderSprite();
 
 
         // override
         virtual void drawCenter( doublePair inPosition, double inFade = 1 );
+        
 
+        virtual void drawShadow( doublePair inPosition, double inFade = 1 );
+        
 
         // must be normalized
         void setLookVector( doublePair inLookDir );
@@ -26,14 +30,22 @@ class EyeBorderSprite : public BorderSprite {
         ColorScheme getColors();
 
     protected:
+
+        // must be called by sub-class to specify shadow
+        // freed by this class
+        void setShadow( SpriteHandle inShadow );
+        
         
         ColorScheme mColors;
-
+        
         doublePair mEyeOffset;
         
         char mFillMap[16][16];
 
         double mSquintTimeLeft;
+
+        SpriteHandle mShadowSprite;
+
     };
 
 
